--- a/professor/cursos/turmas/grupo/grupo.css
+++ b/professor/cursos/turmas/grupo/grupo.css
@@ -16,20 +16,24 @@ body {
     height: 100vh;
     width: 100vw;
     font-family: "Poppins", sans-serif;
-    color: #272727;
+    overflow-x: hidden;
+}
+
+main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: #272727;
 }
 
-body h1 {
+main h1 {
     margin-left: 2%;
     font-size: 18px;
     font-weight: 300;
 }
 
-body p {
+main p {
     font-size: 20px;
     font-weight: 500;
 }
