--- a/professor/perfil/editar/editar_perfil.css
+++ b/professor/perfil/editar/editar_perfil.css
@@ -4,6 +4,19 @@
     box-sizing: border-box;
 }
 
+body {
+    width: 100vw;
+    height: 100vh;
+    font-family: "Poppins", sans-serif;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-position: center center;
+}
+
 .container h1 {
     font-size: 70px;
     display: flex;
@@ -11,17 +24,7 @@
     flex-direction: column;
     align-items: center;
     color: #05204a;
-    font-family: "Poppins", sans-serif;
     margin-bottom: 60px;
-}
-
-body {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-position: center center;
 }
 
 .container input {
