--- a/professor/perfil/perfil.css
+++ b/professor/perfil/perfil.css
@@ -20,11 +20,16 @@ body {
     height: 100vh;
     font-family: "Poppins", sans-serif;
     width: 100vw;
+}
+
+main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
+    width: 100%;
+    height: 80%;
 }
 
 .container {
