--- a/professor/cursos/turmas/grupo/grupo.css
+++ b/professor/cursos/turmas/grupo/grupo.css
@@ -33,6 +33,12 @@ main h1 {
     font-weight: 300;
 }
 
+.modal h1 {
+    font-size: 50px;
+    font-weight: 700;
+    color: #05204a;
+}
+
 main p {
     font-size: 20px;
     font-weight: 500;
@@ -140,6 +146,207 @@ main .tema input {
     /* creates padding around scroll thumb */
 }
 
+.modal {
+    display: none;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 65vh;
+    background-color: rgb(255, 255, 255);
+    align-items: center;
+    flex-direction: column;
+    font-family: "Poppins", sans-serif;
+    padding: 2%;
+    border-radius: 20px;
+    width: 100vw;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    z-index: 999;
+    overflow: hidden;
+    justify-content: space-between;
+}
+
+.bg {
+    position: fixed;
+    z-index: 100;
+    display: none;
+    background-blend-mode: darken;
+    background-color: rgba(0, 0, 0, 0.658);
+    width: 100vw;
+    height: 100vh;
+}
+
+#modal-criar-aluno-grupo form, #modal-editar-aluno form, #modal-add-professor-grupo form {
+    width: 100%;
+}
+
+#modal-excluir-usuario-grupo {
+    width: 60%;
+    height: 30vh;
+    align-items: center;
+    font-weight: 100;
+    background-color: rgb(255, 255, 255);
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: "Poppins", sans-serif;
+    padding: 2%;
+    border-radius: 20px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+}
+
+#btnExcluirAluno {
+    background-color: #a71e34;
+}
+
+#modal-excluir-usuario-grupo h1 {
+    text-align: center;
+}
+
+#modal-excluir-usuario-grupo .segundo_botao {
+    margin-top: 2vh;
+    width: 98%;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    background-color: #044177;
+    border-radius: 30px;
+    font-weight: 700;
+    border: none;
+    padding: 15px;
+}
+
+#modal-excluir-usuario-grupo .buttons {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+#btnConfirmarExclusao {
+    margin-top: 2vh;
+    width: 98%;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    border-radius: 30px;
+    font-weight: 700;
+    border: none;
+    padding: 15px;
+    background-color: #a71e34;
+}
+
+#btnCancelarExclusao {
+    margin-top: 2vh;
+    width: 98%;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    border-radius: 30px;
+    font-weight: 700;
+    border: none;
+    padding: 15px;
+    background-color: #c2c2c2;
+}
+
+.btnExcluirProfessor , .btnEditarAlunoGrupo {
+    border: none;
+    background: none;
+    align-self: flex-end;
+    font-size: x-large;
+    margin-right: 5px;
+}
+
+.button5 {
+    color: white;
+    border: none;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: #044177;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50%;
+}
+
+.lab-inp {
+    margin-top: 1%;
+    margin-bottom: 1%;
+    flex-direction: column;
+}
+
+.lab-inp input {
+    background-color: #e3e3e3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204a;
+    padding: 15px;
+}
+
+.icon.inputIconBg i {
+    background-color: #aaa;
+    padding: 9px 4px;
+    border-radius: 4px 0 0 4px;
+}
+
+.icon-edit {
+    position: relative;
+}
+
+.icon-edit i {
+    position: absolute;
+    right: 1vw;
+    top: 45%;
+    padding: 9px 8px;
+    color: #808080;
+    transition: 0.3s;
+}
+
+.icon-edit.inputIconBg i {
+    background-color: rgb(255, 0, 0);
+    padding: 9px 4px;
+    border-radius: 4px 0 0 4px;
+}
+
+.tipo-select {
+    background-color: #e3e3e3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204a;
+    padding: 15px;
+}
+
+#addProfessorGrupo {
+    display: flex;
+    flex-direction: column;
+}
+
+.selected {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.selected::-webkit-scrollbar {
+    width: 12px;
+    /* width of the entire scrollbar */
+}
+
+.selected::-webkit-scrollbar-thumb {
+    background-color: #05204a;
+    /* color of the scroll thumb */
+    border-radius: 10px;
+    /* roundness of the scroll thumb */
+    border: none;
+    /* creates padding around scroll thumb */
+}
+
 .data-apresentacao {
     margin-top: 50px;
 }
@@ -174,12 +381,13 @@ main .tema input {
 .documentacao_div {
     display: flex;
     width: 100%;
+    justify-content: space-between;
 }
 
 .documentacao {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 50%;
 }
 
 .documentacao label {
@@ -189,20 +397,47 @@ main .tema input {
 }
 
 .primeiro_botao {
-    font-size: 15px;
-    width: 20%;
-    background-color: rgba(240, 248, 255, 0);
+    margin-top: 2vh;
+    width: 98%;
     color: white;
-    background-color: #044177;
-    border-radius: 10px;
-    font-weight: 300;
+    font-weight: 700;
+    border-radius: 30px;
     border: none;
-    padding: 10px;
-    margin-bottom: 5%;
+    padding: 15px;
+    background-color: #c2c2c2;
+    margin-right: 5%;
+}
+
+.acoes-form-grupo  {
+    display: flex;
+    width: 50%;
+    justify-content: flex-end;
+    gap: 20px;
+    margin-top: 0.75%;
 }
 
 #btnSalvarAlteracoes {
     background-color: #0664B7;
+    width: 10vw;
+    height: 40%;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+#btnVoltar {
+    background-color: #c2c2c2;
+    width: 10vw;
+    height: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.acoes-form-grupo a {
+    text-decoration: none;
 }
 
 .editar_div {
@@ -212,12 +447,18 @@ main .tema input {
 }
 
 .segundo_botao {
-    width: 100%;
-    background-color: rgba(240, 248, 255, 0);
+    margin-top: 2vh;
+    width: 98%;
     color: white;
     background-color: #044177;
     border-radius: 30px;
     font-weight: 700;
     border: none;
     padding: 15px;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 100%;
 }
