--- a/professor/usuarios/usuarios.css
+++ b/professor/usuarios/usuarios.css
@@ -44,7 +44,6 @@
 }
 
 .button5 {
-    border-radius: 50%;
     margin-right: 3%;
     margin-bottom: -35%;
 }
@@ -105,6 +104,10 @@
     right: 0vw;
     top: 90vh;
     background-color: #044177;
+}
+
+.space li {
+    cursor: pointer;
 }
 
 #modal-excluir {
