--- a/home/login/login.css
+++ b/home/login/login.css
@@ -81,7 +81,6 @@ form .txt_field {
   background: #0987f7;
   transition: 0.5s;
 }
-
 .txt_field input:focus~label,
 .txt_field input:valid~label {
   top: -5px;
@@ -111,7 +110,7 @@ input:valid~label {
   text-decoration: underline;
 }
 
-input[type="submit"] {
+input[type="button"] {
   width: 300px;
   height: 50px;
   border: 1px solid;
@@ -125,7 +124,7 @@ input[type="submit"] {
   margin-bottom: 30px;
 }
 
-input[type="submit"]:hover {
+input[type="button"]:hover {
   border-color: #0987f7;
   transition: 0.5s;
 }
@@ -139,7 +138,19 @@ input[type="submit"]:hover {
     width: 84%;
   }
 
-  input[type="submit"] {
+  input[type="button"] {
     width: 230px;
   }
+}
+
+#div_invalid{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+#p_invalid{
+  color: #b70606;
+  margin-bottom: 10px;
+  font-weight: 600;
+  display: none;
 }
