--- a/instituicao/style.css
+++ b/instituicao/style.css
@@ -22,10 +22,27 @@ body {
     width: 100vw;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     position: relative;
 }
+
+.outro-container{
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 
 .container h1 {
     font-size: 70px;
