--- a/instituicao/style.css
+++ b/instituicao/style.css
@@ -20,6 +20,7 @@ body {
     height: 100vh;
     font-family: "Poppins", sans-serif;
     width: 100vw;
+    justify-content: center;
     display: flex;
     flex-direction: column;
     position: relative;
