--- a/instituicao/cursos/style.css
+++ b/instituicao/cursos/style.css
@@ -166,7 +166,7 @@ body {
     background-color: rgba(0, 0, 0, 0.658);
 }
 
-img {
+.container-geral img {
     width: 100%;
     margin-bottom: 1%;
     margin-top: 2%;
