--- a/instituicao/perfil/editar/style.css
+++ b/instituicao/perfil/editar/style.css
@@ -29,17 +29,17 @@ body {
     padding: 15px;
 }
 
-button {
+.container button {
     padding: 10px;
     border: 5px solid;
     font-family: "Poppins", sans-serif;
 }
 
-::placeholder {
+.container ::placeholder {
     font-family: "Hind", sans-serif;
 }
 
-#primeiro_botao {
+.container #primeiro_botao {
     margin-top: 2vh;
     width: 100%;
     background-color: rgba(240, 248, 255, 0);
@@ -49,22 +49,22 @@ button {
     padding: 15px;
 }
 
-.buttons {
+.container .buttons {
     display: flex;
     flex-direction: row-reverse;
 }
 
-a {
+.container a {
     text-decoration: none;
     color: white;
 }
 
-a:hover {
+.container a:hover {
     text-decoration: none;
     color: white;
 }
 
-#segundo_botao {
+.container #segundo_botao {
     margin-top: 2vh;
     width: 100%;
     background-color: rgba(240, 248, 255, 0);
@@ -75,15 +75,15 @@ a:hover {
     border: #05204a;
 }
 
-#icon input {
+.container #icon input {
     padding-right: 50px;
 }
 
-#icon {
+.container #icon {
     position: relative;
 }
 
-#icon i {
+.container #icon i {
     position: absolute;
     right: 1vw;
     top: 45%;
@@ -92,7 +92,7 @@ a:hover {
     transition: 0.3s;
 }
 
-#icon.inputIconBg i {
+.container #icon.inputIconBg i {
     background-color: #aaa;
     padding: 9px 4px;
     border-radius: 4px 0 0 4px;
