--- a/instituicao/perfil/editar/style.css
+++ b/instituicao/perfil/editar/style.css
@@ -16,10 +16,14 @@
 body {
     width: 100vw;
     height: 100vh;
+}
+
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-position: center center;
+    height: 75vh;
 }
 
 .container input {
