--- a/instituicao/cursos/turmas/vizualizacao_grupo/style.css
+++ b/instituicao/cursos/turmas/vizualizacao_grupo/style.css
@@ -4,32 +4,32 @@
     box-sizing: border-box;
 }
 
+body {
+    height: 100vh;
+    width: 100vw; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .grupo {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 90vh;
     max-width: 80vw;
-}
-
-body {
-    height: 100vh;
-    width: 100vw;
     font-family: "Poppins", sans-serif;
     color: #272727;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    align-self: center;
 }
 
-body h1 {
+.grupo h1 {
     margin-left: 2%;
     font-size: 18px;
     font-weight: 300;
 }
 
-body p {
+.grupo p {
     font-size: 20px;
     font-weight: 500;
 }
