--- a/aluno/projeto_tcc/style.css
+++ b/aluno/projeto_tcc/style.css
@@ -10,27 +10,24 @@
     justify-content: space-between;
     height: 90vh;
     max-width: 80vw;
+    list-style: none;
+    margin-left: 145px;
+    color: #272727;
 }
 
 body {
     height: 100vh;
     width: 100vw;
     font-family: "Poppins", sans-serif;
-    color: #272727;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
 }
 
-body h1 {
+.grupo h1 {
     margin-left: 2%;
     font-size: 18px;
     font-weight: 300;
 }
 
-body p {
+.grupo p {
     font-size: 20px;
     font-weight: 500;
 }
