--- a/aluno/planner/style.css
+++ b/aluno/planner/style.css
@@ -7,12 +7,17 @@
 body {
     height: 100vh;
     font-family: "Poppins", sans-serif;
-    padding: 2%;
+    
+}
+
+.container-geral{
+    padding: 0 2% 0 5%;
 }
 
 .container-topicos{
     display: flex;
     justify-content: space-between;
+    height: 80vh;
 }
 
 .tipo_usuario ul {
@@ -35,6 +40,7 @@ body {
     cursor: pointer;
     text-decoration: none;
 }
+
 
 .tipo_usuario ul li:first-child {
     border-top-left-radius: 25px;
@@ -79,19 +85,25 @@ body {
 }
 
 .listagem-topicos::-webkit-scrollbar {
-    width: 12px;  overflow-y: auto;
+    width: 12px;  
+}
+.topico::-webkit-scrollbar {
+    width: 12px;  
 }
 
 .topico{
     margin-top: 5rem;
     margin-right: 5rem;
     align-items: center;
- 
+    overflow-y: auto;
+   height: 70vh;
 }
 
 .add-topico{
     margin-top: 5rem;
 }
+
+
 
 .listagem-topicos{
     display: flex;
@@ -104,7 +116,7 @@ body {
     background-color: #04417700;
     margin-top: 2vh;
     border-radius: 30px;
-    font-weight: 700;
+    font-weight: 300;
     padding: 15px;
 }
 
@@ -113,6 +125,24 @@ body {
     flex-direction: row;
     text-align: center;
     align-items: center;
+}
+
+.modal-add-tarefa{
+    display: none;
+    flex-direction: column;
+    background-color:#F4F4F4;
+    border-radius: 20px;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+.modal-add-tarefa input {
+    background-color: #e3e3e3;
+    border-radius: 10px;
+    border: none;
+    border-bottom: 1px solid #05204a;
+    padding: 10px;
+    margin-top: 1rem;
 }
 
 .nome-tarefa p{
@@ -168,4 +198,20 @@ body {
 .progress-bar{
     background-color: #044177;
 
+}
+
+.modal-add-tarefa button{
+ border-radius: 0 0 30px 30px;
+}
+
+.primeiro-botao {
+    margin-top: 2vh;
+    width: 100%;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    background-color: #044177;
+    
+    font-weight: 700;
+    border: none;
+    padding: 15px;
 }
