--- a/instituicao/style.css
+++ b/instituicao/style.css
@@ -20,10 +20,6 @@ body {
     height: 100vh;
     font-family: "Poppins", sans-serif;
     width: 100vw;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    position: relative;
 }
 
 .outro-container{
@@ -31,17 +27,12 @@ body {
     flex-direction: column;
 }
 
-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 .container{
     display: flex;
-    flex-direction: column;
     justify-content: center;
+    flex-direction: column;
+    position: relative;
+    height: 75vh;
 }
 
 
