--- a/aluno/projeto_tcc/style.css
+++ b/aluno/projeto_tcc/style.css
@@ -187,7 +187,7 @@ body {
     margin-bottom: 2%;
 }
 
-.primeiro_botao:hover {
+.primeiro_botao:hover, #btnOutroArquivo:hover {
     background-color: #e3e3e3;
     color: black;
 }
@@ -271,6 +271,10 @@ body {
     display: flex;
     flex-direction: row-reverse;
     width: 100%;
+}
+
+#btnOutroArquivo {
+    background-color: #0664B7;
 }
 
 .segundo_botao {
