arrumando botões dos modais de grupo do professor e fazendo tela de arquivos e links

--- a/professor/cursos/turmas/grupo/grupo.css
+++ b/professor/cursos/turmas/grupo/grupo.css
@@ -407,7 +407,18 @@ main .tema input {
     padding: 10px;
     background-color: #c2c2c2;
     margin-bottom: 5%;
-    /* margin-right: 5%; */
+}
+
+.quinto_botao {
+    margin-top: 2vh;
+    width: 98%;
+    color: white;
+    font-weight: 700;
+    border-radius: 30px;
+    border: none;
+    padding: 15px;
+    background-color: #c2c2c2;
+    margin-right: 5%;
 }
 
 .acoes-form-grupo  {
