--- a/instituicao/cursos/style.css
+++ b/instituicao/cursos/style.css
@@ -14,6 +14,7 @@ body {
     height: 100vh;
     position: relative;
     font-family: "Poppins", sans-serif;
+    overflow-y: hidden;
 }
 
 .container {
@@ -158,7 +159,7 @@ body {
 
 .bg {
     position: fixed;
-    z-index: 1;
+    z-index: 999;
     width: 100%;
     height: 100%;
     display: none;
@@ -174,6 +175,7 @@ body {
 
 #ul_container {
     width: 100%;
+    height: 70vh;
     border: 2px solid;
     border-color: #05204a;
     border-radius: 10px;
@@ -321,8 +323,33 @@ body {
     padding: 15px;
 }
 
+.primeiro_botao{
+    margin-top: 2vh;
+ width: 98%;
+ background-color: rgba(240, 248, 255, 0);
+ color: white;
+ background-color: #044177;
+ border-radius: 30px;
+ font-weight: 700;
+ border: none;
+ padding: 15px;
+}
+
 
 #quarto_botao {
+    margin-top: 2vh;
+    width: 98%;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    background-color: #a71e34;
+    border-radius: 30px;
+    font-weight: 700;
+    border: none;
+    padding: 15px;
+}
+
+
+.quarto_botao {
     margin-top: 2vh;
     width: 98%;
     background-color: rgba(240, 248, 255, 0);
@@ -495,9 +522,10 @@ body {
 }
 
 .button5 {
+    position: fixed;
+    right: 50px;
+    bottom: 50px;
     border-radius: 50%;
-    margin-right: 3%;
-    margin-bottom: -35%;
     height: 85px;
     width: 85px;
 }
