--- a/instituicao/cursos/turmas/style.css
+++ b/instituicao/cursos/turmas/style.css
@@ -14,6 +14,7 @@ body {
     height: 100vh;
     position: relative;
     font-family: "Poppins", sans-serif;
+    overflow-y: hidden;
 }
 
 .container {
@@ -130,6 +131,14 @@ ul::-webkit-scrollbar-thumb {
     position: absolute;
 }
 
+.lab-inp-participantes input {
+    background-color: #c2c2c2;
+    border-radius: 10px;
+    padding: 15px;
+    width: 90%;
+    position: absolute;
+}
+
 .selected {
     display: flex;
     flex-direction: column;
@@ -174,7 +183,7 @@ ul::-webkit-scrollbar-thumb {
 
 .bg {
     position: fixed;
-    z-index: 1;
+    z-index: 999;
     width: 100%;
     height: 100%;
     display: none;
@@ -304,7 +313,6 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 1%;
 }
 
 .membro {
@@ -363,6 +371,49 @@ ul {
     font-weight: 400;
 }
 
+.modal .lab-inp {
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
+.modal .lab-inp-modal {
+    margin-top: 2%;
+    margin-bottom: 2%;
+    width: 100%;
+}
+
+.modal .lab-inp input {
+    background-color: #e3e3e3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204a;
+    padding: 15px;
+    width: 100%;
+}
+
+#iconInputAddMembros {
+    position: relative;
+}
+
+#iconInputAddMembros i {
+    position: absolute;
+    right: 6%;
+    top: 65%;
+    padding: 9px 8px;
+    color: #808080;
+    transition: 0.3s;
+}
+
+#iconInputAddMembros.inputIconBg i {
+    background-color: #aaa;
+    padding: 9px 4px;
+    border-radius: 4px 0 0 4px;
+}
+
+
+.lab-inp-modal label {
+    font-weight: 400;
+}
+
 .lab-inp {
     margin-top: 1%;
     margin-bottom: 1%;
@@ -374,7 +425,7 @@ ul {
     width: 100%;
 }
 
-.lab-inp-modal input {
+.lab-inp input {
     background-color: #e3e3e3;
     border-radius: 10px;
     border-bottom: 1px solid #05204a;
@@ -466,6 +517,14 @@ ul {
     font-weight: 700;
     border: none;
     padding: 15px;
+}
+
+.modal-add-membros input {
+    background-color: #e3e3e3;
+    border-radius: 10px;
+    padding: 15px;
+    width: 100%;
+    position: absolute;
 }
 
 .membro-container {
@@ -585,14 +644,13 @@ ul {
 }
 .button5 {
     color: white;
-    position: static;
+    position: fixed;
+    right: 50px;
+    bottom: 50px;
     border: none;
     width: 80px;
     height: 80px;
-    margin-bottom: 0%;
     border-radius: 50%;
-    margin-right: 3%;
-    margin-bottom: -88vh;
     background-color: #044177;
 }
 
@@ -641,6 +699,11 @@ ul {
         align-items: center;
         text-align: center;
         font-size: 15px;
+    }
+
+    .modal .lab-inp input {
+        font-size: 15px;
+        height: 40px;
     }
 
     .lab-inp input {
