--- a/aluno/planner/style.css
+++ b/aluno/planner/style.css
@@ -1,3 +1,137 @@
+.kebab {
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 0 16px;
+    top: 12px;
+  }
+
+  .kebab figure {
+    width: 6px;
+    height: 6px;
+    border-radius: 5px;
+    background: #00bcd4;
+    margin: 3px 0;
+  }
+  .middle {
+    transition: all 0.25s cubic-bezier(0.72, 1.2, 0.71, 0.72);
+    transform: scale(1);
+    position: relative;
+    box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
+    -webkit-filter: blur(0.1px);
+    filter: blur(0.1px);
+  }
+  .middle.active {
+    transform: scale(4.5);
+    transition: all 0.25s cubic-bezier(0.32, 2.04, 0.85, 0.54);
+    box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
+  }
+  
+  .cross {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    margin-top: -1px;
+    font-family: 'Nunito', sans-serif;
+    color: white;
+    transition: all 0.2s cubic-bezier(0.72, 1.2, 0.71, 0.72);
+    font-size: 22px;
+    user-select: none;
+  }
+  .cross.active {
+    transform: translate(-50%, -50%) scale(1);
+    transition: all 0.15s cubic-bezier(0.32, 2.04, 0.85, 0.54);
+  }
+  h1, a, li {
+    font-family: Roboto, sans-serif;
+  }
+  a, li {
+    color: #6b6b6b;
+    text-decoration: none;
+  }
+  .nav {
+    margin-left: 20%;
+  }
+  .nav > li {
+    display: inline-block;
+    padding: 1em 18px;
+    cursor: pointer;
+  }
+  .nav > li:hover {
+    background: #ebebeb;
+  }
+  .dropdown {
+    position: absolute;
+    right: 0;
+    top: 3em;
+    transition: all 0.25s ease-out;
+    transform: scale(0);
+    transform-origin: 100% 0;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 8px 0 rgba(0, 0, 0, 0.12);
+  }
+  .dropdown li {
+    display: block;
+    width: 100%;
+  }
+  .dropdown li a {
+    width: 100%;
+    padding: 1em 18px;
+    display: inline-block;
+    white-space: pre;
+    box-sizing: border-box;
+  }
+  .dropdown li a:hover {
+    background: #ebebeb;
+  }
+  .dropdown:hover ul {
+    transform: scale(1);
+  }
+  .dropdown.active {
+    transform: scale(1);
+    transition: all 0.25s cubic-bezier(0.5, 1.8, 0.9, 0.8);
+  }
+  .follow {
+    overflow: hidden;
+    width: 42px;
+    height: 42px;
+    border-radius: 50px;
+    background: #03A9F4;
+    display: block;
+    margin: 300px auto 0;
+    white-space: nowrap;
+    padding: 13px;
+    box-sizing: border-box;
+    color: white;
+    transition: all 0.2s ease;
+    font-family: Roboto, sans-serif;
+    text-decoration: none;
+    box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.2);
+  }
+  .follow i {
+    margin-right: 20px;
+    transition: margin-right 0.2s ease;
+  }
+  .follow:hover {
+    width: 134px;
+  }
+  .follow:hover i {
+    margin-right: 10px;
+  }
+  @media screen and (max-width: 800px) {
+    .follow {
+      margin: 400px auto 0;
+    }
+  }
+  
+
+.dropdown.active {
+  transform: scale(1);
+  transition: all 0.25s cubic-bezier(.5,1.8,.9,.8);
+}
+
+
 * {
     margin: 0;
     padding: 0;
@@ -226,6 +360,81 @@ body {
     font-weight: 700;
     border: none;
     padding: 15px;
-   }
+}
 
-   
+.modal-editar-tarefa{
+    display: flex;
+    flex-direction: column;
+    background-color: #F4F4F4;
+    width: 15vw;
+    height: 20%;
+    padding: 5%;
+    border-radius: 10px;
+    z-index: 99;
+    top: 55%;
+    left: 20%;
+}
+
+.alterar-cor{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.alterar-cor p{
+    margin-top: 15%;
+}
+
+.container-alterar-cor{
+    display: flex;
+}
+
+.container-alterar-cor img{
+    margin-right: 15%;
+}
+
+.duplicar{
+    display: flex;
+    flex-direction: row;
+}
+
+.duplicar p{
+    margin-top: 5%;
+}
+
+.duplicar img{
+    margin-right: 5%;
+}
+
+.mover-para{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.mover-para p{
+    margin-top: 15%;
+}
+
+.container-mover-para{
+    display: flex;
+}
+
+.container-mover-para img{
+    margin-right: 15%;
+}
+
+.excluir{
+    display: flex;
+    flex-direction: row;
+}
+
+.excluir p{
+    margin-top: 5%;
+}
+
+.excluir img{
+    margin-right: 5%;
+}
+
+
