--- a/instituicao/cursos/turmas/style.css
+++ b/instituicao/cursos/turmas/style.css
@@ -78,13 +78,13 @@ ul::-webkit-scrollbar-thumb {
 }
 
 .container-selecionando {
-    width: 100%;
+    width: 50%;
     height: 70%;
     margin: 0 1% 0 0;
 }
 
 .container-selecionado {
-    width: 100%;
+    width: 50%;
     height: 70%;
 }
 
@@ -172,6 +172,7 @@ ul::-webkit-scrollbar-thumb {
     margin: 0 1% 0 0;
     text-align: center;
     height: 20vh;
+    width: 50%;
 }
 
 .professores h1 {
@@ -184,6 +185,7 @@ ul::-webkit-scrollbar-thumb {
     margin: 0 0 0 0;
     text-align: center;
     height: 20vh;
+    width: 50%;
 }
 
 .alunos h1 {
@@ -237,10 +239,14 @@ ul {
     border-radius: 10px;
     padding: 2%;
     overflow-y: auto;
+    overflow-x: hidden;
+    display: flex;
+    align-items: center;
 }
 
 .ul-membro {
     margin: 1% 0;
+    width: 100%;
     height: 100%;
     border: 2px solid;
     border-color: #05204a;
@@ -308,6 +314,10 @@ ul {
     align-items: center;
     justify-content: space-between;
     padding: 0 5%;
+}
+
+#modal-membros .li {
+    justify-content: center;
 }
 
 .li-membro {
@@ -387,6 +397,14 @@ ul {
     margin-bottom: 1%;
 }
 
+.icon-membro .lab-inp {
+    background-color: #e3e3e3;
+    border-radius: 10px;
+    border: none;
+    padding: 15px;
+    width: 100%;
+}
+
 .modal .lab-inp-modal {
     margin-top: 2%;
     margin-bottom: 2%;
@@ -415,6 +433,24 @@ ul {
 }
 
 #iconInputAddMembros.inputIconBg i {
+    background-color: #aaa;
+    padding: 9px 4px;
+    border-radius: 4px 0 0 4px;
+}
+
+.icon-membro {
+    position: relative;
+}
+
+.icon-membro i {
+    position: absolute;
+    top: 24%;
+    padding: 9px 8px;
+    color: #808080;
+    transition: 0.3s;
+}
+
+.icon-membro.inputIconBg i {
     background-color: #aaa;
     padding: 9px 4px;
     border-radius: 4px 0 0 4px;
@@ -540,7 +576,8 @@ ul {
 
 .membro-container {
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    width: 100%;
 }
 
 .buttons {
