--- a/instituicao/perfil/editar/style.css
+++ b/instituicao/perfil/editar/style.css
@@ -51,6 +51,7 @@ body {
     background-color: #c2c2c2;
     border-radius: 30px;
     padding: 15px;
+    font-weight: 700;
 }
 
 .container .buttons {
@@ -71,6 +72,7 @@ body {
 .container #segundo_botao {
     margin-top: 2vh;
     width: 100%;
+    font-weight: 700;
     background-color: rgba(240, 248, 255, 0);
     color: white;
     background-color: #044177;
