--- a/instituicao/perfil/infos_pagamento/style.css
+++ b/instituicao/perfil/infos_pagamento/style.css
@@ -66,6 +66,7 @@ body {
     background-color: #044177;
     border-radius: 30px;
     padding: 15px;
+    font-weight: 700;
 }
 
 #segundo_botao {
@@ -76,6 +77,7 @@ body {
     background-color: #c2c2c2;
     border-radius: 30px;
     padding: 15px;
+    font-weight: 700;
 }
 
 @media (max-width: 1200px) {
