arrumando tamanho da logo na responsividade do home

--- a/home/componentes/header/styles_header.css
+++ b/home/componentes/header/styles_header.css
@@ -161,6 +161,7 @@ header button:hover {
         position: absolute;
         left: 20%;
         top: 20px;
+        width: 62px;
     }
 
     header {
