--- a/instituicao/usuarios/style.css
+++ b/instituicao/usuarios/style.css
@@ -653,13 +653,26 @@ ul {
     background-color: #c2c2c2;
 }
 
-@media (max-width: 830px) {
+.mt-5 {
+    margin-top: 0rem !important;
+}
+@media (max-width: 1500px) {
     .space {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-between;
+        height: 100%;
+        width: 90%;
+    }
+
+    .usuario{
+        width: 10px;
+    }
+
+    .container{
+        width: 10%;
         align-items: center;
+        text-align: center;
     }
 
     .tipo_usuario ul li {
@@ -678,13 +691,13 @@ ul {
     }
 
     .ul {
-        width: 100%;
-        height: 10%;
+        width: 70vw;
+        height: 100%;
         border: 2px solid;
         border-color: #05204a;
         border-radius: 10px;
         padding: 5%;
-        overflow-y: auto;
+        overflow-y: auto; 
     }
 
     .turma_selecionada {
@@ -696,5 +709,175 @@ ul {
         background-color: #f4f4f4;
         border-radius: 20px;
         overflow-y: auto;
+    }
+
+    .button5{
+        right: 20px;
+        bottom: 20px;
+    }
+
+    .modal h1{
+        font-size: 30px;
+    }
+
+    .modal{
+        width: 100%;
+        height: 70vh;
+    }
+
+    #modal-editar{
+        width: 100%;
+        height: 70vh;
+    }
+    
+    #modal-excluir{
+        width: 50%;
+        height: 40vh;
+    }
+
+    #modal-excluir h1{
+        font-size: 30px;
+    }
+
+    #modal-excluir h2{
+        font-size: 25px;
+    }
+
+    #modal-excluir .buttons{
+width: 100%5
+    }
+}
+
+
+@media (max-width: 500px) {
+
+    .space {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+   
+    }
+
+    .usuario{
+        width: 10px;
+    }
+
+    .li h2{
+        font-size: 20px;
+    }
+
+    .li p{
+        font-size: 20px;
+    }
+
+    .container{
+        width: 10%;
+        align-items: center;
+        text-align: center;
+    }
+
+    .tipo_usuario ul li {
+        list-style: none;
+        width: 30%;
+        height: 50px;
+        text-align: center;
+        padding: 13px 15px;
+        border: 1px solid #c2c2c2;
+        color: #c2c2c2;
+        font-weight: bold;
+        transform: all 0.2s ease;
+        cursor: pointer;
+        text-decoration: none;
+        font-size: 12px;
+    }
+
+    .ul {
+        width: 100vw;
+        height: 90%;
+        border: 2px solid;
+        border-color: #05204a;
+        border-radius: 10px;
+        padding: 5%;
+        overflow-y: auto; 
+    }
+
+    .turma_selecionada {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 90vw;
+        height: 70vh;
+        background-color: #f4f4f4;
+        border-radius: 20px;
+        overflow-y: auto;
+    }
+
+    .button5 {
+        width: 90%;
+        background-color: rgba(240, 248, 255, 0);
+        color: white;
+        background-color: #044177;
+        border-radius: 20px;
+        font-weight: 700;
+        border: none;
+        bottom: 1%;
+    }
+
+    .modal{
+        width: 100%;
+        height: 90%;
+        padding: 2%;
+    }
+
+    .modal-editar {
+        width: 100%;
+        height: 70%;
+        padding: 2%;
+    }
+
+
+    .buttons .msg{
+        font-size: 12px;
+    }
+    .modal h1{
+        font-size: 30px;
+    }
+
+    .lab-inp{
+        width: 100%;
+    }
+
+    .sidebar{
+        display: none;
+    }
+
+    .usuario .img{
+        width: 50px;
+        margin-bottom: 0;
+    }
+
+    #modal-excluir{
+        width: 90vw;
+        height: 40vh;
+    }
+
+    #modal-editar{
+        height: 90vh;
+    }
+
+    #modal-excluir h1{
+        font-size: 30px;
+    }
+
+    #modal-excluir h2{
+        font-size: 20px;
+    }
+
+    .mt-5 {
+        margin-top: 0rem !important;
     }
 }
