--- a/professor/perfil/editar/editar_perfil.css
+++ b/professor/perfil/editar/editar_perfil.css
@@ -66,6 +66,7 @@ body {
     align-items: center;
     font-size: 15px;
     justify-content: center;
+    margin-bottom: 20px;
 }
 
 .container .upload_foto .input_foto {
@@ -164,9 +165,78 @@ a:hover {
     border-radius: 4px 0 0 4px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1508px) {
+
+    .container {
+        margin-left: 100px;
+    }
+}
+
+@media (max-width: 1228px) {
+
     .container h1 {
         font-size: 50px;
+    }
+}
+
+@media (max-width: 991px) {
+
+    .container {
+        
+        margin-left: 175px;
+    }
+}
+
+@media (max-width: 968px) {
+
+    .container {
+
+        margin-left: 150px;
+    }
+}
+
+@media (max-width: 918px) {
+
+    .container {
+
+        margin-left: 120px ;
+    }
+
+}
+
+@media (max-width: 868px) {
+
+    .container {
+
+        margin-left: 100px;
+    }
+}
+
+@media (max-width: 838px) {
+
+    .container {
+
+        margin-left: 90px;
+    }
+}
+
+@media (max-width: 828px) {
+
+    .container {
+
+        margin-left: 80px;
+    }
+}
+
+@media (max-width: 768px) {
+
+    .container {
+        margin-left: 150px;
+    }
+
+    .container h1 {
+        font-size: 50px;
+        margin-bottom: 30px;
     }
 
     .container .profile_image {
@@ -174,7 +244,73 @@ a:hover {
         height: 100px;
     }
 
+    .container .upload_foto .btn_upload_foto {
+
+        width: 165px;
+    }
+
     #space {
         width: 70%;
+    }
+
+    #primeiro_botao, #segundo_botao {
+
+        width: 140px;
+    }
+}
+
+@media (max-width: 568px) {
+
+    .container {
+        margin-left: 115px;
+    }
+
+    .container h1 {
+        
+        font-size: 30px;
+    }
+}
+
+@media (max-width: 500px) {
+
+    #primeiro_botao, #segundo_botao {
+        width: 120px;
+    }
+
+}
+
+@media (max-width: 428px) {
+
+    .container {
+
+        margin-left: 100px;
+    }
+
+    #primeiro_botao, #segundo_botao {
+        width: 100px;
+        font-size: 12px;
+    }
+}
+
+@media (max-height: 800px) {
+
+    .container{
+        margin-top: 0px;
+    }
+
+    .container h1 {
+        font-size: 40px;
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-height: 788px) {
+
+    .container h1 {
+        font-size: 25px;
+    }
+
+    #space {
+        height: auto;
     }
 }
